k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chemnitz-map-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chemnitz-map-server
  template:
    metadata:
      labels:
        app: chemnitz-map-server
    spec:
      containers:
        - name: chemnitz-map-server
          image: mskkote/chemnitz-map-server:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
