k8s/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: chemnitz-map-client
spec:
  selector:
    app: chemnitz-map-client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
