k8s/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - protocol: TCP
      port: 3030
      targetPort: 3000
      name: grafana-ui
