k8s/service-jaeger.yaml
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - protocol: TCP
      port: 16686
      targetPort: 16686
      name: jaeger-ui
    - protocol: TCP
      port: 14268
      targetPort: 14268
      name: jaeger-collector
    - protocol: TCP
      port: 14250
      targetPort: 14250
      name: jaeger-grpc
    - protocol: UDP
      port: 6831
      targetPort: 6831
      name: jaeger-agent-udp1
    - protocol: UDP
      port: 6832
      targetPort: 6832
      name: jaeger-agent-udp2
