k8s/service-pyroscope.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyroscope
spec:
  selector:
    app: pyroscope
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
      name: pyroscope-ui
