k8s/service-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: chemnitz-map-server
spec:
  selector:
    app: chemnitz-map-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
