k8s/ingress-manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-port-in-redirects: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3030
    - host: pyroscope.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pyroscope
                port:
                  number: 4040
    - host: jaeger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686
    - host: prometheus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
    - host: chemnitz-map.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chemnitz-map-client
                port:
                  number: 3000
    - host: api.chemnitz-map.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chemnitz-map-server
                port:
                  number: 8080
